--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dots_indicator: ^2.0.0
+  get: ^4.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
