--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   geocoding: ^2.0.4
   geolocator: ^8.2.0
   intl: ^0.17.0
+  flutter_typeahead: ^3.1.3
+  google_maps_flutter_web: ^0.3.0+2
+  flutter_google_places: ^0.3.0
   url_strategy:
 
 
