--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
 
    <application
-          
+        android:usesCleartextTraffic="true"
         android:label="food_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
